--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -34,9 +34,9 @@
                 <input 
                     type="range" 
                     min="1" 
-                    max="5" 
-                    name="review[rating]" 
-                    id="rating" 
+                    max="5"
+                    name="review[rating]"
+                    id="rating"
                     required 
                 >
                 <div class="invalid-feedback">
@@ -68,7 +68,7 @@
             <% for(review of listing.reviews){%>
                 <div class="card col-5 ms-3 mb-3 position-relative">
                     <div class="position-absolute top-0 end-0 p-2">
-                        <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=delete" method="post">
+                        <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=delete" method="post"></form>
                             <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                         </form>
                     </div>
