--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,7 +3,7 @@
     <div class="col-8 offset-3">
         <h3><b><%= listing.title %></b> <br></h3>
     </div>
-    <div class="card col-6 offset-3 listing-card" style="width: 18rem;">
+    <div class="card col-6 offset-3 listing-card" style="width: 18rem; margin-bottom: 10px;">
         <!-- Image with increased height and current width -->
         <img 
             src="<%= listing.image %>" 
