--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,10 +1,8 @@
-<footer>
+<footer class="fixed-footer"></footer>
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
-
-            
         </div>
         <div>&copy; Wanderlust Private Limited</div>
         <div class="f-info-links">
