--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed-footer"></footer>
+<footer class="fixed-footer">
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-facebook"></i>
