--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,5 @@
 <% layout("/layouts/boilerplate.ejs") %>
-    <h3>All Listings</h3>
+    <h3 class="mb-3">All Listings</h3>
     <!-- <form action="/listings/new" method="get">
         <button>create new listing</button>
     </form> -->
