--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,20 +1,20 @@
 <% layout("/layouts/boilerplate.ejs") %>
 
 <div class="row mt-3">
-  <h1 class="col-6 offset-3 mb-3">Signup for wanderlust</h1>
+  <h1 class="col-6 offset-3 mb-3">Login for wanderlust</h1>
   <div class="col-6 offset-3">
-    <form action="/signup" method="post" class="needs-validation" novalidate>
+    <form action="/login" method="post" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
         <input
           name="username"
           id="username"
-          placeholder="enter username"
+          placeholder="enter username/email"
           type="text"
           class="form-control"
           required
         />
-      </div>
+      <!-- </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
         <input
@@ -25,7 +25,7 @@
           class="form-control"
           required
         />
-      </div>
+      </div> -->    
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
         <input
@@ -37,7 +37,7 @@
           required
         />
       </div>
-      <button class="btn btn-success mb-3">Signup</button>
+      <button class="btn btn-success mb-3">Login</button>
     </form>
   </div>
 </div>
