--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -29,8 +29,7 @@
       </p>
     </div>
   </div>
-
-
+  <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
   <div class="btns mb-4">
     <a
       href="/listings/<%= listing._id %>/edit"
@@ -41,9 +40,11 @@
       <button class="btn btn-dark offset-5">Delete</button>
     </form>
   </div>
+  <% } %>
 
-  <hr />
+ 
   <div class="col-8 offset-3 mb-3">
+    <% if(currUser){ %>
     <h4>Leave a Review</h4>
     <form
       action="/listings/<%= listing._id %>/reviews"
@@ -79,7 +80,7 @@
       </div>
       <button class="btn btn-outline-dark" type="submit">Submit</button>
     </form>
-
+    <% } %>
     <hr />
 
     <p><b>All Reviews</b></p>
@@ -96,7 +97,8 @@
           </form>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Jane Doe</h5>
+
+          <h5 class="card-title">@<%= review.author.username %></h5>
           <p class="card-text"><%= review.comment %></p>
           <p class="card-text"><%= review.rating %> stars</p>
         </div>
